--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Forwards the data of one Readable to another Readable",
   "main": "index.js",
   "scripts": {
-    "test": "standard && jest"
+    "test": "standard && mocha"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,12 @@
     "url": "https://github.com/bergos/readable-to-readable/issues"
   },
   "homepage": "https://github.com/bergos/readable-to-readable",
-  "dependencies": {},
+  "dependencies": {
+    "readable-stream": "^3.6.0"
+  },
   "devDependencies": {
-    "jest": "^24.5.0",
-    "readable-stream": "^3.2.0",
-    "standard": "^12.0.1"
+    "get-stream": "^5.1.0",
+    "mocha": "^7.1.1",
+    "standard": "^14.3.3"
   }
 }
