--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "get-stream": "^5.1.0",
     "mocha": "^7.1.1",
+    "promise-the-world": "^1.0.1",
     "standard": "^14.3.3"
   }
 }
